# expensetrending

./: .gitignore  CLAUDE.md  pyproject.toml
src/expensetrending/: __init__.py  attachment_handler.py  db_handler.py  email_searcher.py  gmail_client.py  main.py  statement_parser.py  web_app.py
src/expensetrending/templates/: dashboard.html
test/: read_expenses.py
